# simple-gcp-consumer

./: .gitignore  README.md  env-sample  pyproject.toml
gcp_consumer/: __init__.py  __main__.py  config.py  handlers.py  routes.py
