[tool.black]
line-length = 110
target-version = ["py37"]

[tool.isort]
line_length = 110
multi_line_output = 3
known_localfolder = ["pydrinker_gcp", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
include_trailing_comma = true

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
secondary = true

[tool.poetry]
name = "simple-gcp-consumer"
version = "0.1.0"
description = "Consume an GCP Subscriber with Pydrinker"
authors = ["Rafael Henrique da Silva Correia <rafael@abraseucodigo.com.br>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pydrinker-gcp = "^1.0.0-beta.1"
prettyconf = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
